@@ -1,6 +1,7 @@
 [1.5.1-SNAPSHOT]
 - Added JRebel support to UiContainer
 - Added label + icon getters for TabButton
+- Added removeAll() method to UiNavigation interface and implementations
 
 [1.5.0]
 WARNING: This release changes the default target timestep from 100FPS to 60FPS. 
